# protocon

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  .vimrc  BUILD.bazel  CMakeLists.txt  COPYING  Doxyfile  LICENSE  MODULE.bazel  Makefile  Makefile.raw  README  README.md  WORKSPACE.bazel  biring.cc  conflictfamily.cc  conflictfamily.hh  deadfree.cc  dimacs.c  graphviz.hh  infile.hh  infile.leg  inst-bit3.c  inst-coloring.c  inst-dijkstra.c  inst-dijkstra4state.c  inst-matching.c  inst-sat3.c  inst.cc  inst.hh  interactive.cc  kautz.cc  launch.sh  main-mpi.cc  main.cc  main.hh  mpidissem.cc  mpidissem.hh  (+59 more)
.github/: dependabot.yml
doc/: Makefile  README.md  algo.tex  behavior.tex  benchmark.md  bibliography.bib  changes.md  grammar.md  legit.md  permit.md  preamble.tex  predef.tex  protocon.1  thanks.md  tosat.tex  tut.md
example/: Coloring.md  Matching.md  Orientation.md  TokenPassing.md  index.md
examplesett/: AlternatingBit.args  ByzantineGenerals.args  ColorRing.args  ColorRingDistrib.args  ColorRingDizzy.prot  ColorRingLocal.args  ColorRingSymm.args  DiningCrypto.args  DiningPhilo.args  DiningPhiloRand.args  LeaderRingHuang.args  LeaderTree.args  MatchRing.args  MatchRingDizzy.args  MatchRingThreeState.args  OrientDaisy.args  OrientRing.args  OrientRingOdd.args  OrientRingRand.args  SegmentRing.args  StopAndWait.args  StopAndWaitRand.args  SumNotTwo.args  TokenChainDijkstra.args  TokenChainFourState.args  TokenChainThreeState.args  TokenRingFiveState.args  TokenRingOdd.args  TokenRingRand.args  TokenRingSixState.args  TokenRingThreeBit.args  TokenRingThreeState.args
examplesoln/: BUILD  BUILD.bazel  ByzantineGenerals.prot  ColorRing.prot  ColorRing.protocon  ColorRingDistrib.prot  ColorRingDizzy.prot  ColorRingLocal.prot  ColorRingSymm.prot  ColorTree.prot  ColorTree.protocon  ColorUniRing.prot  DiningCrypto.prot  DiningPhilo.prot  DiningPhiloRand.prot  FoundThreeBitTokenRing.protocon  LeaderRingHuang.prot  LeaderRingHuang.protocon  LeaderTree.prot  LogicalIncrement.prot  MatchRingDizzy.prot  MatchRingOneBit.prot  MatchRingOneBit.protocon  MatchRingThreeState.prot  OldOrientRing.prot  OldOrientRing.protocon  OrientDaisy.prot  OrientOddRing.protocon  OrientRing.prot  OrientRing.protocon  OrientRingLink.prot  OrientRingLink.protocon  OrientRingLink2.prot  OrientRingOdd.prot  OrientRingViaToken.prot  OrientRingViaToken.protocon  QuietThreeBitTokenRing.protocon  SortChain.prot  SortChain.protocon  SortRing.prot  (+21 more)
examplespec/: BUILD  ByzantineGenerals.prot  ColorChain.prot  ColorKautz.prot  ColorKautz.protocon  ColorKautzBi.prot  ColorKautzDizzy.prot  ColorKautzOrient.prot  ColorKautzOrient.protocon  ColorKautzReverse.prot  ColorKautzReverse.protocon  ColorKautzSymm.protocon  ColorMobius.prot  ColorMobius.protocon  ColorRing.prot  ColorRing.protocon  ColorRingDistrib.prot  ColorRingDizzy.prot  ColorRingLocal.prot  ColorRingSymm.prot  (+71 more)
src/: BUILD  BUILD.bazel  CMakeLists.txt  biring-ext.cc  biring.cc  conflictfamily.cc  conflictfamily.hh  conflictfamily_test.cc  deadfree.cc  graphviz.cc  graphviz.hh  inst.cc  inst.hh  interactive.cc  interactive.hh  kautz.cc  kautz.hh  lace_wrapped.hh  main-all.cc  main-all.hh  main-mpi.cc  main.cc  mpidissem.cc  mpidissem.hh  msat.cc  namespace.hh  opt.cc  opt.hh  pfmla-bittable.c  pfmla-genepi.c  pfmla-genepi.h  pfmla-glu.c  pfmla-glu.h  pfmla-minisat.cc  pfmla.c  pfmla.cc  pfmla.h  pfmla.hh  pfmla_test.cc  pla.cc  (+36 more)
src/cx/: BUILD  BUILD.bazel  CMakeLists.txt  alphatab.c  alphatab.h  alphatab.hh  associa.h  associa.hh  bittable.h  bittable.hh  bittable_test.c  bstree.c  bstree.h  def.h  fileb.c  fileb.h  fileb.hh  fileb_test.c  kautz.cc  kautz.hh  lgtable.h  lgtable.hh  lgtable_test.c  map.hh  ofile.c  ofile.h  ofile.hh  ospc.c  ospc.h  ospc_test.c  rbtree.c  rbtree.h  rbtree_test.c  sesp.c  sesp.h  set.hh  synhax.h  synhax.hh  syscx.c  syscx.h  (+12 more)
src/fildesh/: BUILD.bazel  CMakeLists.txt  ifstream.cc  ifstream.hh  ofstream.cc  ofstream.hh
src/gui/: CMakeLists.txt  explorew.cc  explorew.hh  explorew.ui  main.cc  mainw.hh
src/inline/: BUILD.bazel  CMakeLists.txt  README.md  eq_cstr.h  slurp_file_to_string.hh
src/satsyn/: BUILD  BUILD.bazel  CMakeLists.txt  detect.c  detect.h  dimacs.c  dimacs.h  encodesat.c  encodesat.h  inst-bit3.c  inst-bit3.h  inst-coloring.c  inst-coloring.h  inst-dijkstra.c  inst-dijkstra.h  inst-dijkstra4state.c  inst-dijkstra4state.h  inst-matching.c  inst-matching.h  inst-sat3.c  inst-sat3.h  instance.c  instance.h  pla.c  pla.h  promela.c  promela.h  satsyn.c  synsearch.c  synsearch.h  xnsys.c  xnsys.h
src/udp-impl/: BUILD  BUILD.bazel  CMakeLists.txt  README.md  act.h  protocol.c  protocol.h
src/uni/: BUILD  BUILD.bazel  CMakeLists.txt  README.md  adjlist.hh  aperiodic.cc  canonical.cc  canonical.hh  classify.cc  generate.cc  livelock.cc  livelock.hh  synthesize.cc  uniact.hh  unifile.cc  unifile.hh  xlate.cc
src/verif/: include.cmake  overify.cmake
test/examplesoln/: BUILD  BUILD.bazel  CMakeLists.txt  Espresso_MatchRingThreeState.c  Espresso_MatchRingThreeState.cc  Espresso_MatchRingThreeState_test.fildesh  MatchRingThreeState.pla  PLA_MatchRingThreeState_test.fildesh  PLA_MatchRingThreeState_test.lace  Promela_OrientDaisy_test.fildesh  Promela_OrientDaisy_test.lace  UDP_TokenRingRand_test.fildesh  UDP_TokenRingRand_test.lace  Verif4_OrientRingOdd_failure_test.fildesh  Verif4_OrientRingOdd_failure_test.lace  Verif4_Sync_OrientRing_test.fildesh  Verif4_Sync_OrientRing_test.lace
test/satsyn/: BUILD.bazel  detect_livelock_test.c  encodesat_coloring_test.cc  synthesize_bit3_test.c  synthesize_coloring_test.c  synthesize_dijkstra4state_test.c  synthesize_dijkstra_test.c  synthesize_matching_test.c
test/src/: BUILD.bazel  CMakeLists.txt  biring_test.fildesh  conflictfamily_test.cc  kautz_graphviz.cc  kautz_test.fildesh  pcxn_test.cc  stabilization_test.cc  xnsys_test.cc
test/uni/: BUILD.bazel  aperiodic_classify_test.fildesh  aperiodic_expect_test.fildesh  aperiodic_semick_test.fildesh  c_d7_b3_c20_test.fildesh  g_d7_b3_c20_test.fildesh  ppgfun_livelock_test.fildesh  synthesize_test.fildesh
(+211 files in other folders)
