module(
    name = "protocon",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "fildesh", version = "0.1.9")
bazel_dep(name = "mdd-glu", version = "2.4.0")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "rules_peg", version = "0.1.18")

git_override(
    module_name = "fildesh",
    remote = "https://github.com/fildesh/fildesh.git",
    commit="179b4a5baf6f26767332a9ad82650a8f48c809e3",
)
git_override(
    module_name = "mdd-glu",
    remote = "https://github.com/ProtocolConvergence/mdd-glu.git",
    commit="b47adfb9019f9e50230003cae520f5da96dabf2f",
)
