load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")


# Rule repository
git_repository(
    name = "rules_foreign_cc",
    remote = "https://github.com/bazelbuild/rules_foreign_cc.git",
    commit = "ec690c50751e53d6b11a56dc200019b2db5eda6a",
    shallow_since = "1611433718 -0800",
)
load("@rules_foreign_cc//:workspace_definitions.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

all_content = """filegroup(name = "all", srcs = glob(["**"]), visibility = ["//visibility:public"])"""


git_repository(
    name = "lace",
    remote = "https://github.com/grencez/lace.git",
    commit = "41326bbee87f67d5d99c9a0cd1a715d00bbd33d9",
    shallow_since = "1633856853 -0700",
    #branch = "trunk",
)

new_git_repository(
    name = "mdd_glu",
    build_file_content = all_content,
    remote = "https://github.com/grencez/mdd-glu.git",
    commit = "2d00c406296ecc505d4aaa2cb4628fc5c441e011",
    shallow_since = "1616899330 -0700",
)

#new_local_repository(
#    name = "mdd_glu",
#    build_file_content = all_content,
#    path = "../mdd-glu",
#)

http_archive(
    name = "peg",
    build_file_content = all_content,
    urls = ["https://github.com/gpakosz/peg/archive/0.1.18.tar.gz"],
    sha256 = "aa25b2e10cc673a0a6f20114b0dc5cfc6ce221d1c257852fe4128f0782cbb585",
    strip_prefix = "peg-0.1.18",
)

