load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")


# Rule repository
http_archive(
    name = "rules_foreign_cc",
    sha256 = "bcd0c5f46a49b85b384906daae41d277b3dc0ff27c7c752cc51e43048a58ec83",
    strip_prefix = "rules_foreign_cc-0.7.1",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.7.1.tar.gz",
)
load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
rules_foreign_cc_dependencies()


http_archive(
    name = "fildesh",
    urls = ["https://github.com/fildesh/fildesh/archive/refs/tags/v0.1.3.tar.gz"],
    sha256 = "f65bcae7580b749e34b27682b915b5cdc239b5481f13db7bc94136381e337128",
    strip_prefix = "fildesh-0.1.3",
)
#git_repository(
#    name = "fildesh",
#    remote = "https://github.com/grencez/fildesh.git",
#    commit = "1bddffb7c521c54b4d6a49cf6533b2c75b06f1f0",
#    shallow_since = "1649842818 -0700",
#    #branch = "trunk",
#)


all_content = """filegroup(name = "all", srcs = glob(["**"]), visibility = ["//visibility:public"])"""

new_git_repository(
    name = "mdd_glu",
    build_file_content = all_content,
    remote = "https://github.com/grencez/mdd-glu.git",
    commit = "2d00c406296ecc505d4aaa2cb4628fc5c441e011",
    shallow_since = "1616899330 -0700",
)

#new_local_repository(
#    name = "mdd_glu",
#    build_file_content = all_content,
#    path = "../mdd-glu",
#)

http_archive(
    name = "peg",
    build_file_content = all_content,
    urls = ["https://github.com/gpakosz/peg/archive/0.1.18.tar.gz"],
    sha256 = "aa25b2e10cc673a0a6f20114b0dc5cfc6ce221d1c257852fe4128f0782cbb585",
    strip_prefix = "peg-0.1.18",
)

