load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")


# Rule repository
http_archive(
    name = "rules_foreign_cc",
    sha256 = "2a4d07cd64b0719b39a7c12218a3e507672b82a97b98c6a89d38565894cf7c51",
    strip_prefix = "rules_foreign_cc-0.9.0",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.9.0.tar.gz",
)
load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
rules_foreign_cc_dependencies()


http_archive(
    name = "fildesh",
    urls = ["https://github.com/fildesh/fildesh/archive/v0.1.6.tar.gz"],
    sha256 = "0a176d6744992806e6376062df5a56ee55c2bc666be807a414c5bf10f2eba5d1",
    strip_prefix = "fildesh-0.1.6",
)


all_content = """filegroup(name = "all", srcs = glob(["**"]), visibility = ["//visibility:public"])"""

new_git_repository(
    name = "mdd_glu",
    build_file_content = all_content,
    remote = "https://github.com/grencez/mdd-glu.git",
    commit = "2d00c406296ecc505d4aaa2cb4628fc5c441e011",
    shallow_since = "1616899330 -0700",
)

http_archive(
    name = "peg",
    build_file_content = all_content,
    urls = ["https://github.com/gpakosz/peg/archive/0.1.18.tar.gz"],
    sha256 = "aa25b2e10cc673a0a6f20114b0dc5cfc6ce221d1c257852fe4128f0782cbb585",
    strip_prefix = "peg-0.1.18",
)


#git_repository(
#    name = "fildesh",
#    remote = "https://github.com/grencez/fildesh.git",
#    commit = "1bddffb7c521c54b4d6a49cf6533b2c75b06f1f0",
#    shallow_since = "1649842818 -0700",
#    #branch = "trunk",
#)

#new_local_repository(
#    name = "mdd_glu",
#    build_file_content = all_content,
#    path = "../mdd-glu",
#)
